--- a/sprint-01/exercicios/exercicio-01/index.html
+++ b/sprint-01/exercicios/exercicio-01/index.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>>> COMEX << </h1> <br><br>
-    <h1>Visão do Produto</h1> <br><br>
-            O projeto <h1>Comex</h1> é um sistema de e-commerce marketplace.
-            Seu objetivo é permitir que a sua base de clientes tenha acesso a vários vendedores e,
-            assim, consolidar-se como o shopping eletrônico mais popular da internet.<br><br>
-            <h1>Entidades importantes</h1> <br><br>
-            Produto<br> Categoria<br>Cliente<br>Pedido<br>ItemDePedido
-            <h1>3. Requisitos não funcionais</h1><br><br>Manutenibilidade<br><br>
-            <h1>Requisitos funcionais</h1><br><br>
-            Os requisitos funcionais são classificados em três categorias no Comex:<br><br>
-            <h1>Essencial:</h1> implementação obrigatória para o sistema atingir seu objetivo principal:<br><br>
-            <h1>Importante: acrescentam muito valor ao negócio;</h1><br><br>
-            <h1>Desejável: incrementam usabilidade e funcionalidades.</h1><br><br>
-            <h1.::Alura LEVEL UP::.</h1>
-</body>
-
-</html>
+<h1>>> COMEX << </h1> <br><br>
+<h1>Visão do Produto</h1> <br><br>
+O projeto <h1>Comex</h1> é um sistema de e-commerce marketplace.
+Seu objetivo é permitir que a sua base de clientes tenha acesso a vários vendedores e,
+assim, consolidar-se como o shopping eletrônico mais popular da internet.<br><br>
+<h1>Entidades importantes</h1> <br><br>
+Produto<br> Categoria<br>Cliente<br>Pedido<br>ItemDePedido
+<h1>3. Requisitos não funcionais</h1><br><br>Manutenibilidade<br><br>
+<h1>Requisitos funcionais</h1><br><br>
+Os requisitos funcionais são classificados em três categorias no Comex:<br><br>
+<h1>Essencial:</h1> implementação obrigatória para o sistema atingir seu objetivo principal:<br><br>
+<h1>Importante:</h1> acrescentam muito valor ao negócio;<br><br>
+<h1>Desejável:</h1> incrementam usabilidade e funcionalidades.<br><br>
+<h1>.::Alura LEVEL UP::.</h1>
