--- a/sprint-01/exercicios/exercicio-01/index.html
+++ b/sprint-01/exercicios/exercicio-01/index.html
@@ -1,14 +1,51 @@
-<h1>>> COMEX << </h1> <br><br>
-<h1>Visão do Produto</h1> <br><br>
-O projeto <h1>Comex</h1> é um sistema de e-commerce marketplace.
-Seu objetivo é permitir que a sua base de clientes tenha acesso a vários vendedores e,
-assim, consolidar-se como o shopping eletrônico mais popular da internet.<br><br>
-<h1>Entidades importantes</h1> <br><br>
-Produto<br> Categoria<br>Cliente<br>Pedido<br>ItemDePedido
-<h1>3. Requisitos não funcionais</h1><br><br>Manutenibilidade<br><br>
-<h1>Requisitos funcionais</h1><br><br>
-Os requisitos funcionais são classificados em três categorias no Comex:<br><br>
-<h1>Essencial:</h1> implementação obrigatória para o sistema atingir seu objetivo principal:<br><br>
-<h1>Importante:</h1> acrescentam muito valor ao negócio;<br><br>
-<h1>Desejável:</h1> incrementam usabilidade e funcionalidades.<br><br>
-<h1>.::Alura LEVEL UP::.</h1>
+<meta charset="UTF-8">
+<h1>>> COMEX << </h1>
+        <hr>
+        <ol>
+
+            <h3>
+                <li>Visão do Produto</li>
+            </h3>
+
+
+
+            <p>
+                O projeto <strong>Comex</strong> é um sistema de e-commerce marketplace. Seu objetivo é permitir que a
+                sua base de clientes
+                tenha acesso a vários vendedores e, assim, consolidar-se como o shopping eletrônico mais popular da
+                internet.
+            </p>
+
+            <h3>
+                <li>Entidades importantes</li>
+            </h3>
+            <ul type="disc">
+                <strong>
+                    <li>Produto</li>
+                    <li>Categoria</li>
+                    <li>Cliente</li>
+                    <li>Pedido</li>
+                    <li>ItemDePedido</li>
+                </strong>
+            </ul>
+
+            <h3>
+                <li>Requisitos não funcionais</li>
+            </h3>
+            <ul type="disc">
+                <strong>
+                    <li>Manutenibilidade</li>
+                </strong>
+            </ul>
+
+            <h3>
+                <li>Requisitos funcionais</li>
+            </h3>
+            <p>Os requisitos funcionais são classificados em três categorias no Comex:</p>
+            <p><strong>Essencial:</strong> implementação obrigatória para o sistema atingir seu objetivo principal:</p>
+            <p><strong>Importante:</strong> acrescentam muito valor ao negócio;</p>
+            <p><strong>Desejável:</strong> incrementam usabilidade e funcionalidades.</p>
+        </ol>
+        <hr>
+
+        <h4>.::Alura LEVEL UP::.</h4>
