--- a/sprint-01/exercicios/exercicio-06/exercicio-06.html
+++ b/sprint-01/exercicios/exercicio-06/exercicio-06.html
@@ -30,11 +30,12 @@
         function conteudo() {
 
             document.write("O projeto")
-            document.write("<strong> Comex </strong>")
+            document.write("<b> Comex </b>")
             document.write(" é um sistema de e-commerce marketplace.")
             document.write(
                 " Seu objetivo é permitir que a  sua base de clientes tenha acesso a vários vendedores e," +
-                " assim, consolidar - se como o shopping eletrônico mais popular da internet.<br>"   )
+                " assim, consolidar - se como o shopping eletrônico mais popular da internet.<br>")
+
         }
 
         function rodape() {
@@ -50,7 +51,14 @@
             pularLinha();
         }
 
-        function somaIdade(){
+        function mostrarEstatisticas() {
+            document.write("***Estatística***");
+            pularLinha();
+            somaIdade();
+            calcularMedia();
+
+        }
+        function somaIdade() {
             document.write("Soma das idades: " + idadesAcumuladas + "<br>")
         };
 
@@ -72,18 +80,16 @@
         var anoAtual = new Date();
 
         cabecalho();
-        alinhamento();
         titulo("<h2> .:: Lista de clientes ::. </h2>");
         alinhamento();
-        titulo("- Código:" + 1);
+        titulo("<b> - Código: " + 1 + "</b>");
         registrarClientes(" Fulano", " Fevereiro", 1980);
-        titulo("- Código:" + 2);
+        titulo("<b> - Código: " + 2 + "</b>");
         registrarClientes(" Beltrano", " Maio", 1981);
-        titulo("- Código:" + 3);
+        titulo("<b> - Código: " + 3 + "</b>");
         registrarClientes("Sicrano", " Novembro", 1984);
-        somaIdade();
-        calcularMedia();
-        pularLinha();
+        mostrarEstatisticas();
+        alinhamento();
         rodape();
     </script>
 
